cmake_minimum_required(VERSION 3.25)
project(network-programming)

set(CMAKE_CXX_STANDARD 20)

add_executable(client client/main.cpp)
add_executable(server-tcp server-tcp/main.cpp)
add_executable(server-udp server-udp/main.cpp)
add_executable(client-udp client-udp/main.cpp)
add_executable(translate-dns-old translate-dns-old/main.cpp)
add_executable(client-tcp-dns client-tcp-dns/main.cpp)
add_executable(non-blocking-server-tcp non-blocking-server-tcp/main.cpp)
add_executable(multi-thread-client multi-thread-client/main.cpp)
add_executable(multi-thread-server multi-thread-server/main.cpp)
add_executable(poll-client poll-client/main.cpp)
add_executable(epoll-client epoll-client/main.cpp)